# walmart-agent-demo

./: .env.example  .gitignore  DEMO_OUTPUTS.md  DESIGN.md  PROJECT_FILES_CN.md  README.md  README_CN.md  README_EN.md  REMEDIATION_CN.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/: DATA_SNAPSHOT.json  README.md
data/market/: README.md  README_EN.md  csi300.csv  csi300.csv.meta.json  sse_composite.csv  sse_composite.csv.meta.json  szse_component.csv  szse_component.csv.meta.json
docs/: GOLDEN_QA.md  PROJECT_STRUCTURE_CN.md
evals/: golden_answers.json  retrieval_cases.json
scripts/: download_market_data.py  download_sec_10k.py
src/finagent/: __init__.py  __main__.py  agent.py  cli.py  evaluation.py  ingest.py  market.py  memory.py  models.py  retrieval.py  sec.py  sources.py  websearch.py
tests/: test_finagent.py  test_review_readiness.py
