[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-agent-takehome"
version = "0.1.0"
description = "Evidence-first financial research agent for the take-home interview"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
finagent = "finagent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
